Change for server param, update jars, update readme