@@ -13,7 +13,7 @@ The implementation features both a command-line interface (CLI) and a JavaFX gra
 |:------- |:----------- |
 | Complete rules | ✅ |
 | TUI | ✅ |
-| GUI | :x: |
+| GUI | ✅ |
 | RMI | ✅ |
 | Socket | ✅ |
 | Level one flight | ✅ |
@@ -30,9 +30,15 @@ The jar exectuables are available at [jar artifacts](https://github.com/filippov
 ## How to run Galaxy Trucker
 ### Server
 1. Get the artifact from [server jar](https://github.com/filippovalentini/IS24-AM36/tree/main/deliveries/GalaxyTrucker/out/artifacts/ServerGalaxyTrucker)
-2. Run `java -jar ServerGalaxyTrucker.jar`
+2. Run `java -jar ServerGalaxyTrucker.jar [HOST_IP]`
 ### Client
+#### Windows
 1. Get the artifact from [client jar](https://github.com/filippovalentini/IS24-AM36/tree/main/deliveries/GalaxyTrucker/out/artifacts/ClientGalaxyTrucker)
 2. Run `java -jar ClientGalaxyTrucker.jar` it will present an option to select between the Text User Interface (TUI) and the Graphical User Interface (GUI) via console input
 3. (Optional) Run directly with TUI `java -jar ClientGalaxyTrucker.jar --tui`
 4. (Optional) Run directly with GUI `java -jar ClientGalaxyTrucker.jar --gui`
+#### Mac/Linux
+1. Get the artifact from [client jar](https://github.com/filippovalentini/IS24-AM36/tree/main/deliveries/GalaxyTrucker/out/artifacts/ClientGalaxyTrucker)
+2. Run `java --module-path "[PATH_TO_JavaFX_SDK]/lib" --add-modules javafx.controls,javafx.fxml -jar ClientGalaxyTrucker.jar` it will present an option to select between the Text User Interface (TUI) and the Graphical User Interface (GUI) via console input
+3. (Optional) Run directly with TUI `java -jar ClientGalaxyTrucker.jar --tui`
+4. (Optional) Run directly with GUI `java --module-path "[PATH_TO_JavaFX_SDK]/lib" --add-modules javafx.controls,javafx.fxml -jar ClientGalaxyTrucker.jar --gui`
